sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:16: error: illegal start of simple expression
		if(!plusPetit(i,j))}){
                                   ^